Release Notes - Flume - Version v0.5.0.rc

** New Feature

    . EsOutput periodically report statistics
    . engine permits plugins to register HTTP REST api callback
    . cardinality output will export/reset counters through REST
    . replication from local logs to remote via TCP(compression TODO)
    . init.d script added

** Improvement

    . http monitoring with cmd: [ping, stat, plugins]
    . when timestamp is obviously invalid, correct it[als pkg]
    . report msg/s bytes/s
    . ES index patterns add support for ym/ymw/ymd

** Bug

    . occasionally, EsOutput can't get EsIndex/EsType info
      [maybe] because SkyOutput matches all and because of race condition it recyles first

** Todo

    . change logger to code.google.com/p/log4go

----